[package]
name = "playground"
version = "0.1.0"
authors = ["rishflab <rishflab@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.16.2"
futures = "0.3.4"
env_logger = "0.7.1"
async-std = "*"
libp2p-core = "0.16.0"
libp2p-swarm = "0.16.1"
void = "1.0.2"
anyhow = "1.0.26"
thiserror = "1.0.11"
rand = "0.7.3"
log = "0.4.8"
wasm-timer = "0.2.4"
